--- a/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
@@ -12,8 +12,7 @@
 
     <ui:define name="specToolButtons" >
         <p:commandButton icon="ui-icon-disk" title="#{bundle.SaveAndClose}" update="mainFRM"
-                         actionListener="#{timerCardBean.onCloseCard('save')}" ajax="false"
-                         onclick="sendFormSize('#{_bean.getFormName()}');">
+                         actionListener="#{timerCardBean.onCloseCard('save')}">
            <f:param name="isRequired" value="true"/>
        </p:commandButton>
         <span class="ui-separator">
