--- a/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
@@ -11,8 +11,7 @@
 
     <ui:define name="specToolButtons" >
         <p:commandButton icon="ui-icon-disk" title="#{bundle.SaveAndClose}" update="mainFRM"
-                         actionListener="#{_bean.onCloseCard('save')}" ajax="false"
-                         onclick="sendFormSize('#{_bean.getFormName()}');">
+                         actionListener="#{_bean.onCloseCard('save')}">
             <f:param name="isRequired" value="true"/>
        </p:commandButton>
         <span class="ui-separator">
