--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -21,7 +21,6 @@
         <!--h:outputScript library="js" name="ITHitWebDAVClient.js" /-->
         <h:outputScript library="js" name="confirm-close-window.js"/>
         <p:importConstants type="com.maxfill.dictionary.DictFilters" var="DictFilters" />
-        <p:importConstants type="com.maxfill.dictionary.DictModules" var="DictModules" />   
         <p:importConstants type="com.maxfill.dictionary.DictFrmName" var="DictFrmName" />        
 
         <h:form id="mainFRM">            
@@ -162,7 +161,7 @@
                         </p:panelGrid>
                     </p:panel>
 
-                    <p:panel id="processes" header="#{bundle.Processes}" rendered="#{applicationBean.licence.isCanUses(DictModules.MODULE_PROCESSES)}" toggleable="true" styleClass="dash-panel">
+                    <p:panel id="processes" header="#{bundle.Processes}" rendered="#{applicationBean.isCanUsesProcess()}" toggleable="true" styleClass="dash-panel">
                         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="without-spaces" >
                             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="without-spaces" >
                                 <p:graphicImage id="imgProcesses" value="/resources/icon/process-32.png"/>
@@ -278,7 +277,7 @@
                         </p:panelGrid>
                     </p:panel>
 
-                    <p:panel id="orgStructure" header="#{bundle.OrgStructure}" toggleable="true" styleClass="dash-panel">
+                    <p:panel id="orgStructure" header="#{bundle.OrgStructure}" rendered="#{applicationBean.isCanUsesStaffs()}" toggleable="true" styleClass="dash-panel">
                         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="without-spaces" >
                             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="without-spaces" >
                                 <p:graphicImage id="imgStaffs" value="/resources/icon/structure-32.png"/> 
@@ -290,7 +289,7 @@
                         </p:panelGrid>                        
                     </p:panel>
 
-                    <p:panel id="dictsExplorer" header="#{bundle.Partners}" toggleable="true" styleClass="dash-panel">
+                    <p:panel id="dictsExplorer" header="#{bundle.Partners}" rendered="#{applicationBean.isCanUsesPartners()}"  toggleable="true" styleClass="dash-panel">
                         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="without-spaces" >
                             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="without-spaces" >
                                 <p:graphicImage id="imgPartners" value="/resources/icon/book-32.png"/>
