--- a/escom-bpm-web/src/main/webapp/view/admin/worktime/work-time.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/worktime/work-time.xhtml
@@ -17,24 +17,34 @@
     </ui:define> 
     
     <ui:define name="centerFormContent">
-        <p:panelGrid id="gridWorkTime" columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12"> 
+            <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-2, ui-grid-col-10" styleClass="ui-grid-col-12 without-spaces">            
+                <p:outputLabel value="#{bundle.Date}:"/>
+                <p:outputLabel value="#{workTimeCardBean.editedItem.date}">                    
+                </p:outputLabel>
+            </p:panelGrid>
+            <p:separator styleClass="ui-grid-col-12"/>
             <p:selectBooleanCheckbox value="#{workTimeCardBean.editedItem.standart}"
-                                     itemLabel="#{bundle.StandardWorkingTime}"
-                                     disabled="#{_bean.readOnly}">
-                <p:ajax update="gridWorkTime" process="@this" oncomplete="itemChange = 1;"/>
+                                         itemLabel="#{bundle.StandardWorkingTime}"
+                                         disabled="#{_bean.readOnly}">
+                    <p:ajax update="gridWorkTime" process="@this" oncomplete="itemChange = 1;"/>
             </p:selectBooleanCheckbox>
+        
+            <p:panelGrid id="gridWorkTime" columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12 without-spaces">            
+                <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">            
+                    <p:outputLabel value="#{bundle.Type}:" indicateRequired="true"/>
+                    <p:selectOneRadio id="typeDay" value="#{_bean.editedItem.dayType}" 
+                                      disabled="#{_bean.readOnly or _bean.editedItem.standart}" layout="grid" columns="1" >
+                        <f:selectItem itemLabel="hollyday" itemValue="Hollyday"/>
+                        <f:selectItem itemLabel="workday"  itemValue="Workday" />
+                        <p:ajax update="gridWorkTime" event="valueChange" onstart="itemChange = 1;"/>
+                    </p:selectOneRadio>
+                </p:panelGrid>
 
-            <p:outputLabel value="#{bundle.Type}:" indicateRequired="true"/>
-            <p:selectOneRadio id="typeDay" value="#{_bean.editedItem.dayType}" 
-                              disabled="#{_bean.readOnly or _bean.inheritsWorkTime}" layout="grid" columns="1" >
-                <f:selectItem itemLabel="hollyday" itemValue="hollyday"/>
-                <f:selectItem itemLabel="workday"  itemValue="workday" />
-                <p:ajax update="gridWorkTime" event="valueChange" onstart="itemChange = 1;"/>
-            </p:selectOneRadio>
-
-            <ui:include src="/view/common/work-time.xhtml">
-                <ui:param name="_readOnly" value="#{_bean.readOnly or _bean.editedItem.standart or _bean.editedItem.dayType ne 'workday' }"/>
-            </ui:include>
+                <ui:include src="/view/common/work-time.xhtml">
+                    <ui:param name="_readOnly" value="#{_bean.readOnly or _bean.editedItem.standart or _bean.editedItem.dayType ne 'Workday' }"/>
+                </ui:include>            
+            </p:panelGrid>
         </p:panelGrid>
     </ui:define>
 </ui:composition>
