календарь рабочего времени

--- a/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-card.xhtml
@@ -41,7 +41,7 @@
             </p:panelGrid>
         </p:tab>
         
-        <p:tab title="#{bundle.WorkTime}">             
+        <p:tab title="#{bundle.WorkTime}" rendered="#{applicationBean.isCanUsesTasks()}">             
             <ui:include src="/view/common/work-time.xhtml"/>
         </p:tab>
     </ui:define>
