календарь рабочего времени

--- a/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
@@ -34,7 +34,7 @@
                 if (!isFullPage) {
                     sendFormSize(formName);
                 }
-                return true;
+                return false;
             };
         </script> 
 
