--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -47,6 +47,7 @@
                                 <p:menuitem icon="ui-icon-print" value="#{bundle.PrintBarCode}"
                                             disabled="#{_bean.editedItem.id == null}"
                                             actionListener="#{_bean.onPreViewBarcode()}"/>
+                                <ui:insert name="menuExtReports" />
                             </p:menuButton>
                             <ui:insert name="specSubMenu" />
                         </f:facet>
